Adapt to new gradle API